            - remove the labels attribute
            - remove the commentlist attribute
            - remove the showlabels attribute
        - Simplify LightCurve.__str__ docstring and remove unused bit of code
        - corrected logical bug in calcfluxshiftmags()

        lc_func.py
        --------------
        - moved all functions related to list of LigthCurve to this module

        spl_func.py
        --------------
        - moved all functions related to Splines manipulation to this module

        datapoints.py
        --------------
        - moved the DataPoints class to this module

    regdiff
    ---
        scikitgp.py
        -------------
        - replaced the module pymcgp.py tp scikitgp.py. New implementation of the Gaussian Process based on scikit-learn

        rslc.py
        -------------
        - renamed class Rslc (Capwords convention)

    sim
    ---
        run.py
        ------------
        - renamed Class RunResults
        - added method get_delays_from_ts()
        - reintroduced multi-cpu processing in the applyopt() function.
        - remove the analyze argument, it is now done by default

        twk.py
        ------
        -suppressed addspl function.

        src.py
        -------------
        -renamed spline() method in generate_spline() to avoid name conflict

        plot.py
        -------------
        -removed the mad function as it is implemented in pycs3.gen.stat

    comb
    ---
        plot.py
        -------
        -moved the function delayplot from sim.plot

        comb.py
        -------
        - getresults() now required that the CSContainer have the _errobars.pkl and _dalys.pkl files
        - In CSContainer constructor (__init__):
            - only the name of the CSCOntainer is now mandatory
        - bug fix in the colour transmission between CSContainer and Group


tests
-----
- Add tests scripts for Continuous Integration


docs
----
- Add a sphinx documentation source code